--- a/Transportaciones_CICESE/app/src/main/res/values/strings.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values/strings.xml
@@ -54,11 +54,56 @@
     <string name="actualizar_solicitud">Actualizar solicitud</string>
     <string name="actualizar_servicio">Actualizar servicio</string>
     <string name="actualizar_todo">Actualizar todo</string>
-    <string name="dar_seguimiento_a_su_solicitud">- Dar seguimiento a su solicitud</string>
+    <string name="dar_seguimiento_a_su_solicitud">Dar seguimiento a sus servicios</string>
     <string name="consultar_sus_eventos">Consultar sus eventos</string>
     <string name="title_activity_inicio_asistentes">InicioAsistentesActivity</string>
     <string name="registar_usuarios_y_solicitudes">Registar usuarios, solicitudes y servicios</string>
     <string name="calificaci_n">Calificación</string>
     <string name="color">Color</string>
     <string name="title_activity_inicio_choferes">InicioChoferesActivity</string>
+    <string name="pasajero">Pasajero</string>
+    <string name="chofer">Chofer</string>
+    <string name="asistente">Asistente</string>
+    <string name="actualizaciones">Actualizaciones</string>
+    <string name="registros">Registros</string>
+    <string name="consultas">Consultas</string>
+    <string name="servicios">Servicios</string>
+    <string name="notificaciones_rapidas">Notificaciones rápidas</string>
+    <string name="eventos">Eventos</string>
+    <string name="registrar_chofer">Registrar chofer</string>
+    <string name="selecccione_una_de_las_siguientes_opciones">Selecccione una de las siguientes opciones</string>
+    <string name="registrar_asistente">Registrar asistente</string>
+    <string name="tip">Al hacer un registro, por favor asegurese de que todos los datos sean correctos</string>
+    <string name="registrar_solicitud">Registrar solicitud</string>
+    <string name="tipo">Tipo (Sedan, Camioneta, Van,...)</string>
+    <string name="placas">Número de placas</string>
+    <string name="anio">Año</string>
+    <string name="marca">Marca (Ford, Toyota, Kia,...)</string>
+    <string name="model">Modelo (Focus, Camry, Spectra,...)</string>
+    <string name="datos_de_encuentro">Datos de encuentro</string>
+    <string name="datos_de_destino">Datos de destino</string>
+    <string name="datos_del_vehiculo">Datos del vehículo</string>
+    <string name="requerido">Se requiere capturar los siguientes campos</string>
+    <string name="email">Correo electrónico</string>
+    <string name="username">Nombre de usuario</string>
+    <string name="detalles_servicio">Detalles del servicio</string>
+    <string name="estado">Estado</string>
+    <string name="fum">Fecha de última \\nmodificación</string>
+    <string name="nombre_chofer">Nombre del chofer</string>
+    <string name="bienvenido">Bienvenido a CICESE Transportaciones</string>
+    <string name="como_chofer">Como chofer, a través de esta aplicación usted podrá:</string>
+    <string name="int_msj">Intercambiar mensajes con su pasajero asignado y asistente</string>
+    <string name="q_noti">Enviar notificaciones rápidas a pasajeros</string>
+    <string name="localizacion">Enviar su localización</string>
+    <string name="mayor_info">Para mayor información, favor de consultar la ayuda</string>
+    <string name="como_asistente">Como asistente, a través de esta aplicación usted podrá:</string>
+    <string name="int_msj_d">Intercambiar mensajes con los usuarios asociados a un servicio</string>
+    <string name="update_service">Actualizar los datos de los servicios registrados</string>
+    <string name="consultas_info">Realizar consultas a los servicios registrados</string>
+    <string name="como_pasajero">Como pasajero, a través de esta aplicación usted podrá:</string>
+    <string name="seguir_solicitud">Dar seguimiento a su solicitud</string>
+    <string name="int_msj_t">Intercambiar mensajes con su chofer asignado y asistente</string>
+    <string name="calendario_eventos">Consultar su calendario de eventos</string>
+    <string name="rating_servicio">Calificar el servicio que se le ha brindado</string>
+    <string name="popup_msg">Este campo requiere un número de 10 dígitos.\\nEl formato es el siguiente: \\n##########\\ndonde los tres primeros números son la lada, éstos no se colocan entre paréntesis</string>
 </resources>
