--- a/Transportaciones_CICESE/app/src/main/res/values/strings.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="URI">http://158.97.64.134/ci/index.php/api</string>
+    <string name="URI">http://192.168.43.192/ci/index.php/api</string>
     <string name="google_maps_key">AIzaSyAlmfsfU1lRyiFBri6znizt44y2Uz634lM</string>
     <string name="google_directions_key">AIzaSyAjkSX7UHAXF-wcvFzK--HwaklnHVugJJo</string>
     <!-- 192.168.43.192 -->
@@ -108,4 +108,9 @@
     <string name="calendario_eventos">Consultar su calendario de eventos</string>
     <string name="rating_servicio">Calificar el servicio que se le ha brindado</string>
     <string name="popup_msg">Este campo requiere un número de 10 dígitos.\\nEl formato es el siguiente: \\n##########\\ndonde los tres primeros números son la lada, éstos no se colocan entre paréntesis</string>
+    <string name="desc_p_chofer">A través del presente formulario usted podrá registrar a un usuario como chofer en el sistema</string>
+    <string name="desc_p_pasajero">A través del presente formulario usted podrá registrar a un usuario, como pasajero, en el sistema</string>
+    <string name="desc_p_asistente">A través del presente formulario usted podrá registrar a un usuario como asistente en el sistema</string>
+    <string name="desc_p_solicitud">A través de este formulario usted podrá registrar una solicitud de transporte a un usuario pasajero</string>
+    <string name="desc_p_servicio">Una vez registrada la solicitud, para ésta, a través del presente formulario, usted podrá registrar un servicio de transporte </string>
 </resources>
