--- a/Transportaciones_CICESE/app/src/main/res/values-en/strings.xml
+++ b/Transportaciones_CICESE/app/src/main/res/values-en/strings.xml
@@ -109,4 +109,6 @@
     <string name="calendario_eventos">Check your calendar of events</string>
     <string name="rating_servicio">Rate the service that has been provided</string>
     <string name="popup_msg">This field requires a 10-digit number. \nThe format is as follows: \n ########## where the first three numbers are the lada, they are not placed in parentheses</string>
+    <string name="iramisservicios">Mis servicios</string>
+    <string name="iramiseventos">Mis eventos</string>
 </resources>
